Fix window-wrapper on small screen.

--- a/src/assets/css/windows.css
+++ b/src/assets/css/windows.css
@@ -13,8 +13,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 5rem;
-    margin-left: 10rem;
-    width: 100rem;
+    margin-left: 6rem;
 }
 
 .question-window {
